# crate-indexer

./: Cargo.toml  README.md
src/: embeddings.rs  fetcher.rs  indexer.rs  main.rs  mcp.rs  search.rs  storage.rs
